--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/png" href="http://localhost:5000/image/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="http://localhost:5000/image/awakeLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Awake</title>
   </head>
